--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-node --files ./src/simple-test.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -r 0"
   },
   "author": "",
@@ -15,8 +15,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/node": "^13.13.4",
     "cz-conventional-changelog": "^3.1.0",
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   },
   "config": {
     "commitizen": {
